--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   cloud_firestore: ^0.13.7
   provider: ^4.3.1
   flutter_spinkit: ^4.1.2+1
-  html: ^0.14.0+3
+  gradient_app_bar: ^0.0.1
 
 dev_dependencies:
   flutter_test:
