--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  # Firebase
   firebase_core: ^0.4.4
   firebase_auth: ^0.16.1
   cloud_firestore: ^0.13.7
+  firebase_core_web: ^0.1.1+2
+  firebase_auth_web: ^0.1.3+1
+  cloud_firestore_web: ^0.1.1+2
+
   provider: ^4.3.1
   flutter_spinkit: ^4.1.2+1
   gradient_app_bar: ^0.0.1
